# templar

./: .env.example  .gitignore  Makefile  spec.md
apps/api/: Cargo.toml
apps/api/.sqlx/: query-1335dc32bbbcfe58b8834308b42158e21b97ff900b29c6e555e9292012da980e.json  query-19e0c1e02aecfe56cbbb16739d77a9f56d776d8b92e467d7f8e1b2176a5fa9a6.json  query-1ef9a52c68201127f7968995dd038186ee6d54adfc3dce13eea94c3e063c7c14.json  query-46121597a18a13f918ae0bfc7f4b771137cb22b6890ffb0a44eb4c3485181043.json  query-6acdef5b512baa822cf3d76765077b98c241415b2d4e516921dce4c907b80543.json  query-9d4c6b2389575e2765ca0f9a9851b050cd615b9c320e9b45cc3d84fba6f92a62.json  query-a4012682251ee6e703362d0e08b78d795d058fb10fc386bb5508b69617876a0e.json  query-ac5235e9af19275bb55f2eff8f79ea7231f72d21034fa5c3f3f15be2f31e780f.json  query-b8909c25007ba214858b5de449dec94866367ae9558732c1560fcd8852e85ef0.json  query-dd1ffbff2d50828a97cee542149b5509fad188d3d27d34fcf9d7e8cdfec14af2.json  query-e8ac3b6c054135c317886b1467a2ac6e5b384b6051b720bfe8e9805e424b4a6a.json  query-f13b0f5c4ffdad28b8e2b405c5713d660656b3e813eba12d15c8ec4844af0f4d.json  query-f1e2bf85ff8f933f6cfdb9c8db5c5aa4f669c621977f15be736398670ec72242.json
apps/api/src/: config.rs  db.rs  errors.rs  main.rs  state.rs
apps/api/src/context/: batch.rs  completeness.rs  dedup.rs  extractor.rs  handlers.rs  ingest.rs  merger.rs  mod.rs  models.rs  prompts.rs  scoring.rs  splitter.rs  validation.rs  versioning.rs  worker.rs
apps/api/src/generation/: content_selector.rs  fit_scoring.rs  generator.rs  handlers.rs  jd_parser.rs  mod.rs  prompts.rs  tone.rs
(+74 files in other folders)
